[package]
name = "scheduler"
version = "1.1.4"
authors = [ "Microsoft Corporation" ]
description = "Demikernel's Scheduler"
homepage = "https://aka.ms/demikernel"
repository = "https://github.com/demikernel/scheduler"
readme = "README.md"
license-file = "LICENSE"
edition = "2021"

[dependencies]
bit-iter = "1.1.1"
checkers = "0.6.1"
rand = "0.8.5"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false