[package]
name = "scheduler"
version = "1.1.4"
authors = [ "Microsoft Corporation" ]
edition = "2021"
description = "Demikernel's Scheduler"
readme = "README.md"
homepage = "https://aka.ms/demikernel"
repository = "https://github.com/demikernel/scheduler"
license-file = "LICENSE.txt"

[dependencies]
bit-iter = "1.1.1"
rand = "0.8.5"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false