[package]
name = "scheduler"
version = "1.1.4"
authors = [ "Microsoft Corporation" ]
edition = "2021"
description = "Demikernel's Scheduler"
readme = "README.md"
homepage = "https://aka.ms/demikernel"
repository = "https://github.com/demikernel/scheduler"
license-file = "LICENSE.txt"

[dependencies]
bit-iter = "1.1.1"
rand = "0.8.5"

# Build profile used for releases.
[profile.release]
opt-level = 3             # Enable all compiler optimizations.
debug = false             # Do not include any debug info in the binary.
debug-assertions = false  # Do not include any debug assertions in the binary.
overflow-checks = false   # Do not check for overflows at runtime.
lto = "fat"               # Perform link time optimizations across all dependencies (overridden).
panic = "abort"           # Terminate the process upon panic (overridden).
incremental = false       # Disable incremental compilation.
codegen-units = 1         # Produce a single code generation unit (overridden).
rpath = false             # Disable runtime search path.

